# wifi_pc_power_switch

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  LICENSE.raspberry_pi_design  lwipopts.h  main.cpp  wifi_pc_power_switch.kicad_pcb  wifi_pc_power_switch.kicad_pro  wifi_pc_power_switch.kicad_sch
firmware/: CMakeLists.txt  LICENSE  gpico_import.cmake
firmware/include/: FreeRTOSConfig.h  lwipopts.h  network_task.h  secrets.h  server.h  syslog.h  tusb_config.h
firmware/include/pcrb/: cli_task.h  log.h  monitor_task.h  mqtt.h  network_task.h  request_handler.h  server.h  switch.h  switch.ipp  switch_task.h  syslog.h  usb.h  watchdog.h  wifi_management_task.h
firmware/src/: cli_task.cpp  log.cpp  main.cpp  monitor_task.cpp  mqtt.cpp  network_task.cpp  ntp.cpp  request_handler.cpp  server.cpp  switch_task.cpp  usb_descriptors.cpp  watchdog.cpp  wifi_management_task.cpp
include/: FreeRTOSConfig.h  cli_task.h  log.h  lwipopts.h  ntp.h  server.h  switch.h  switch.ipp  switch_task.h  syslog.h  wifi_management_task.h
production/: wifi_pc_power_switch-B_Cu.gbl  wifi_pc_power_switch-B_Mask.gbs  wifi_pc_power_switch-B_Paste.gbp  wifi_pc_power_switch-B_Silkscreen.gbo  wifi_pc_power_switch-Edge_Cuts.gm1  wifi_pc_power_switch-F_Cu.gtl  wifi_pc_power_switch-F_Mask.gts  wifi_pc_power_switch-F_Paste.gtp  wifi_pc_power_switch-F_Silkscreen.gto  wifi_pc_power_switch-NPTH-drl_map.gbr  wifi_pc_power_switch-NPTH.drl  wifi_pc_power_switch-PTH-drl_map.gbr  wifi_pc_power_switch-PTH.drl  wifi_pc_power_switch-job.gbrjob
src/: FreeRTOS_support.cpp  cli_task.cpp  log.cpp  main.cpp  network_task.cpp  ntp.cpp  server.cpp  switch_task.cpp
